--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text="Git testing updated"
             android:layout_gravity="center_horizontal|bottom"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
